# sci_lib

./: .gitignore  CMakeLists.txt  index_builder.pro  main.cpp  sci_lib.pro
docs/: data_layer_design.md  design.md  gui_refactor_plan.md  index_data_design.md  readme.md
sci_lib/: moc_mainwindow.cpp  moc_qcustomplot.cpp  object_script.sci_lib.Release
src/analysis/: statistics_analyzer.cpp  statistics_analyzer.hpp
src/common/: database.cpp  database.hpp  serializer.cpp  serializer.hpp  string_pool.cpp  string_pool.hpp  xml_parser.cpp  xml_value.cpp  xml_value.hpp
src/graph/: AuthorGraph.cpp  AuthorGraph.hpp
src/gui/: mainwindow.cpp  mainwindow.h
src/index/: index_builder.cpp  index_builder.hpp  index_builder_main.cpp  index_format.hpp  index_writer.cpp  index_writer.hpp
src/indexed/analysis/: statistics_analyzer.cpp  statistics_analyzer.hpp
src/indexed/common/: database.cpp  database.hpp  serializer.cpp  serializer.hpp  string_pool.cpp  xml_value.cpp
src/indexed/graph/: AuthorGraph.cpp  AuthorGraph.hpp
src/indexed/gui/: mainwindow.cpp  mainwindow.h
src/indexed/search/: search_engine.cpp  search_engine.hpp
src/search/: search_engine.cpp  search_engine.hpp
test/: test1.cpp  test2.cpp  test3.cpp
